--- a/src/admin-statistic.html
+++ b/src/admin-statistic.html
@@ -48,38 +48,68 @@
 
 					<div class="grid grid-spacing-lg-10">
 						<div class="grid-col-sm-4">
-							<div class="text-body-1 text--bold mb-2">Суперагенты</div>
-							<div class="card py-1 pr-1">
-								<div class="scroll-box scroll-box-small ">
-									<% for(let i = 0; i < 10; i++){ %>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
-									<% } %>
+							<div class="statistic-item" data-toggle-cover>
+								<button class="statistic-item__head btn btn--link btn--primary" data-toggle-link>
+									<div class="text-body-1 text--bold mb-2">Суперагенты</div>
+									<div class="btn btn--primary btn--fill ml-auto d-sm-none">
+										<span class="active-disabled text-small text--demibold">Раскрыть таблицу</span>
+										<span class="active-enabled text-small text--demibold">Скрыть таблицу</span>
+									</div>
+								</button>
+								<div class="statistic-item__content " data-toggle-content data-toggle-height="true" data-toggle-static="true">
+									<div class="py-sm-1 pr-sm-1">
+										<div class="scroll-box scroll-box-small ">
+											<% for(let i = 0; i < 10; i++){ %>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
+											<% } %>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="grid-col-sm-4">
-							<div class="text-body-1 text--bold mb-2">Агенты</div>
-							<div class="card py-1 pr-1">
-								<div class="scroll-box scroll-box-small ">
-									<% for(let i = 0; i < 10; i++){ %>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
-									<% } %>
+							<div class="statistic-item" data-toggle-cover>
+								<button class="statistic-item__head btn btn--link btn--primary" data-toggle-link>
+									<div class="text-body-1 text--bold mb-2">Агенты</div>
+									<div class="btn btn--primary btn--fill ml-auto d-sm-none">
+										<span class="active-disabled text-small text--demibold">Раскрыть таблицу</span>
+										<span class="active-enabled text-small text--demibold">Скрыть таблицу</span>
+									</div>
+								</button>
+								<div class="statistic-item__content " data-toggle-content data-toggle-height="true" data-toggle-static="true">
+									<div class="py-sm-1 pr-sm-1">
+										<div class="scroll-box scroll-box-small ">
+											<% for(let i = 0; i < 10; i++){ %>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
+											<% } %>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="grid-col-sm-4">
-							<div class="text-body-1 text--bold mb-2">Залы</div>
-							<div class="card py-1 pr-1">
-								<div class="scroll-box scroll-box-small ">
-									<% for(let i = 0; i < 10; i++){ %>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
-									<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
-									<% } %>
+							<div class="statistic-item" data-toggle-cover>
+								<button class="statistic-item__head btn btn--link btn--primary" data-toggle-link>
+									<div class="text-body-1 text--bold mb-2">Залы</div>
+									<div class="btn btn--primary btn--fill ml-auto d-sm-none">
+										<span class="active-disabled text-small text--demibold">Раскрыть таблицу</span>
+										<span class="active-enabled text-small text--demibold">Скрыть таблицу</span>
+									</div>
+								</button>
+								<div class="statistic-item__content " data-toggle-content data-toggle-height="true" data-toggle-static="true">
+									<div class="py-sm-1 pr-sm-1">
+										<div class="scroll-box scroll-box-small ">
+											<% for(let i = 0; i < 10; i++){ %>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">adminstar</div>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">albert888</div>
+											<div class="text-body-2 px-3 py-1 w-100 link-hover">qpokycHuk</div>
+											<% } %>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
