--- a/src/auth.html
+++ b/src/auth.html
@@ -31,7 +31,7 @@
         <label class="form-field">
           <div class="text-body-1 text--medium mb-2">Пароль</div>
           <div class="form-input-cover">
-            <input type="text" class="form-input form-input-large pl-10" placeholder="Введите пароль">
+            <input type="password" class="form-input form-input-large pl-10" placeholder="Введите пароль">
             <div class="form-input-start pl-4">
               <svg class="icon color-primary">
                 <use xlink:href="img/icons.svg#lock" />
