--- a/src/html-includes/search-by-name.html
+++ b/src/html-includes/search-by-name.html
@@ -1,12 +1,12 @@
 <form class="">
-  <div class="text-small text-md-body-2 text--demibold mb-2">Поиск по номеру телефона или его части</div>
+  <div class="text-body-2 text--demibold mb-2">Поиск</div>
   <div class="flex w-100 w-md-auto">
     <label class="form-field field-middle flex-grow">
       <div class="form-input-cover">
-        <input type="text" class="form-input pl-12" placeholder="Введите номер телефона">
+        <input type="text" class="form-input pl-12" placeholder="Name/ID">
         <div class="form-input-start pl-4">
           <svg class="icon text-h6 color-primary">
-            <use xlink:href="img/icons.svg#phone" />
+            <use xlink:href="img/icons.svg#search" />
           </svg>
         </div>
       </div>
