--- a/src/html-includes/pagination.html
+++ b/src/html-includes/pagination.html
@@ -1,9 +1,19 @@
 <div class="pagination">
-  <button class="pagination-item btn btn-small btn--primary btn--contur color-text d-none d-xs-flex" disabled>Предыдущая</button>
+  <button class="pagination-item btn btn-small btn--primary btn--contur color-text " disabled>
+    <span class="d-none d-xs-block">Предыдущая</span>
+    <svg class="icon d-xs-none fade-80">
+      <use xlink:href="img/icons.svg#arrow-left" />
+    </svg>
+  </button>
   <button class="pagination-item btn btn-small btn-icon btn--primary btn--fill">1</button>
   <button class="pagination-item btn btn-small btn-icon btn--primary btn--contur color-text">2</button>
   <button class="pagination-item btn btn-small btn-icon btn--primary btn--contur color-text">...</button>
   <button class="pagination-item btn btn-small btn-icon btn--primary btn--contur color-text">5</button>
   <button class="pagination-item btn btn-small btn-icon btn--primary btn--contur color-text">6</button>
-  <button class="pagination-item btn btn-small btn--primary btn--contur color-text d-none d-xs-flex">Следующая</button>
+  <button class="pagination-item btn btn-small btn--primary btn--contur color-text ">
+    <span class="d-none d-xs-block">Следующая</span>
+    <svg class="icon d-xs-none fade-80">
+      <use xlink:href="img/icons.svg#arrow-right" />
+    </svg>
+  </button>
 </div>
