--- a/src/html-includes/search-by-period.html
+++ b/src/html-includes/search-by-period.html
@@ -1,28 +1,32 @@
 <div class="text-body-1 text--bold mb-2">Выберите период</div>
-<form action="" class="flex mb-5">
-  <label class="form-field field-xsmall mr-5 flex-grow">
-    <div class="text-body-2 mb-2">Начало</div>
-    <div class="form-input-cover">
-      <input type="text" class="form-input pr-12 text-small text-xs-body-1" data-datepicker placeholder="15 апреля 2022">
-      <div class="form-input-end pr-4">
-        <svg class="icon text-h6 color-primary">
-          <use xlink:href="img/icons.svg#calendar" />
-        </svg>
-      </div>
+<form action="" class="mb-5">
+  <div class="flex">
+    <label class="form-field field-xsmall mr-5 flex-grow">
+      <div class="text-body-2 mb-2">Начало</div>
+      <div class="form-input-cover">
+        <input type="text" class="form-input pr-12" data-datepicker placeholder="15 апреля 2022">
+        <div class="form-input-end pr-4">
+          <svg class="icon text-h6 color-primary">
+            <use xlink:href="img/icons.svg#calendar" />
+          </svg>
+        </div>
 
-    </div>
-  </label>
-  <label class="form-field field-xsmall mr-md-5 flex-grow">
-    <div class="text-body-2 mb-2">Конец</div>
-    <div class="form-input-cover">
-      <input type="text" class="form-input pr-12 text-small text-xs-body-1" data-datepicker placeholder="20 апреля 2022">
-      <div class="form-input-end pr-4">
-        <svg class="icon text-h6 color-primary">
-          <use xlink:href="img/icons.svg#calendar" />
-        </svg>
       </div>
+    </label>
+    <label class="form-field field-xsmall mr-md-5 flex-grow">
+      <div class="text-body-2 mb-2">Конец</div>
+      <div class="form-input-cover">
+        <input type="text" class="form-input pr-12" data-datepicker placeholder="20 апреля 2022">
+        <div class="form-input-end pr-4">
+          <svg class="icon text-h6 color-primary">
+            <use xlink:href="img/icons.svg#calendar" />
+          </svg>
+        </div>
 
-    </div>
-  </label>
-  <button class="btn btn--primary btn--fill flex-self-end px-md-10 d-none d-md-flex">Показать</button>
+      </div>
+    </label>
+    <button class="btn btn--primary btn--fill flex-self-end px-md-10 d-none d-md-flex">Показать</button>
+  </div>
+  <button class="btn btn--primary btn--fill w-100 mt-2 d-md-none text-small text--demibold">Построить таблицу</button>
+
 </form>
