--- a/src/admin-settings.html
+++ b/src/admin-settings.html
@@ -23,7 +23,7 @@
 					<div class="text-body-2 text-sm-body-0 text--demibold mb-2">Настройка Stargame Authenticator</div>
 					<div class="text-small text-sm-body-2">
 						Скачайте и установите приложение 
-						<a href="" class="btn btn--link btn--primary btn--underline color-text d-inline text-small text-sm-body-2 text--demibold">
+						<a href="" target="_blank" class="btn btn--link btn--primary btn--underline color-text d-inline text-small text-sm-body-2 text--demibold">
 							(https://update.stargamecasino.com/android.apk)
 						</a>. <br> <br class="d-sm-none">
 						Воспользуйтесь камерой телефона для сканирования штрихкода.
