--- a/src/admin-average-deposits.html
+++ b/src/admin-average-deposits.html
@@ -23,11 +23,11 @@
 					<!-- Мобильный вариант скрыт на (min-width:$md) -->
 					<div class="d-md-none">
 						<div class="mobile-table  mt-5">
-							<div class="mobile-table-item detailing-api-mobile-item px-5 py-4 table-cell--mark">
+							<div class="mobile-table-item px-5 py-4 table-cell--mark">
 								<div class="text-small text-xs-body-2 text--demibold text--center">Лимиты по средним депозитам</div>
 							</div>
 							<% for(let i = 0; i < 5; i++ ){ %>
-							<div class="mobile-table-item detailing-api-mobile-item px-5 py-4">
+							<div class="mobile-table-item average-deposits-mobile-item px-5 py-4">
 								<div class="grid grid-spacing-2">
 									<div class="grid-col-12">
 										<div class="flex">
