--- a/src/html-includes/header.html
+++ b/src/html-includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <button class="btn btn--primary header-burger btn-icon d-lg-none" data-toggle-link="sidebar">
-    <svg class="icon">
+    <svg class="icon text-h6">
       <use xlink:href="img/icons.svg#menu" />
     </svg>
   </button>
